--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ env:
 
 jobs:
   test:
+    environment: testing
     env: 
       MONGODB_CLUSTER_ADDRESS: cluster0.6d4u1js.mongodb.net
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
